--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -418,7 +418,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zkU-FI-Esy">
-                                <rect key="frame" x="64" y="329" width="193" height="42"/>
+                                <rect key="frame" x="64" y="323" width="193" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" backgroundImage="uploadUp.png">
@@ -433,14 +433,14 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Date Taken" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="c1Y-Os-8et">
-                                <rect key="frame" x="20" y="242" width="280" height="21"/>
+                                <rect key="frame" x="20" y="236" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.34414859689999999" green="0.15941870590000001" blue="0.075782483659999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to rename this capture" textAlignment="center" minimumFontSize="17" background="textboarder.png" clearButtonMode="whileEditing" id="Sjq-66-pFm">
-                                <rect key="frame" x="37" y="209" width="246" height="25"/>
+                                <rect key="frame" x="37" y="203" width="246" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" red="0.34414859689999999" green="0.15941870590000001" blue="0.075782483659999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -450,7 +450,7 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Vist rambl.it on your computer to view your uploaded capture." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="13" id="Xzx-CB-KDs">
-                                <rect key="frame" x="37" y="271" width="246" height="50"/>
+                                <rect key="frame" x="37" y="265" width="246" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.34414859689999999" green="0.15941870590000001" blue="0.075782483659999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -476,7 +476,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view hidden="YES" opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" id="WUD-gT-gTP">
-                                <rect key="frame" x="0.0" y="-50" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="-182" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uploading Video..." lineBreakMode="tailTruncation" minimumFontSize="10" id="cZm-XX-6TM">
@@ -515,10 +515,22 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
-                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="eYp-N1-nFW">
-                                <rect key="frame" x="121" y="379" width="79" height="27"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="FIN-iZ-qi5">
+                                <rect key="frame" x="93" y="373" width="134" height="27"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </switch>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" backgroundImage="facebookNO.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" backgroundImage="facebookDEPRESSED.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="facebookButtonPressed:" destination="zld-xc-Htz" eventType="touchUpInside" id="7Oc-Fp-lAG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -527,7 +539,7 @@
                     <connections>
                         <outlet property="actionButton" destination="MX8-oI-MT2" id="PRn-72-yOp"/>
                         <outlet property="dateLabel" destination="c1Y-Os-8et" id="NAG-5c-vTh"/>
-                        <outlet property="facebookUploadSwitch" destination="eYp-N1-nFW" id="JH5-xG-MNI"/>
+                        <outlet property="facebookUploadButton" destination="FIN-iZ-qi5" id="LME-t7-4Na"/>
                         <outlet property="statusLabel" destination="Xzx-CB-KDs" id="D48-2o-tT5"/>
                         <outlet property="thumbnailImage" destination="KcO-5t-VPM" id="TBK-od-92D"/>
                         <outlet property="titleTextField" destination="Sjq-66-pFm" id="CNv-U5-E1R"/>
@@ -557,6 +569,8 @@
         <image name="doneDown.png" width="125" height="100"/>
         <image name="doneUp.png" width="125" height="100"/>
         <image name="dropshadow.png" width="640" height="20"/>
+        <image name="facebookDEPRESSED.png" width="268" height="54"/>
+        <image name="facebookNO.png" width="268" height="54"/>
         <image name="gearIcon.png" width="66" height="66"/>
         <image name="header.png" width="640" height="100"/>
         <image name="imageboarderDown.png" width="330" height="330"/>
@@ -629,11 +643,12 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackDetailViewController.h"/>
             <relationships>
                 <relationship kind="action" name="actionButtonPressed:"/>
+                <relationship kind="action" name="facebookButtonPressed:"/>
                 <relationship kind="action" name="playButtonPressed:"/>
                 <relationship kind="action" name="uploadButtonPressed:"/>
                 <relationship kind="outlet" name="actionButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="facebookUploadSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="facebookUploadButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="statusLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="thumbnailImage" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="titleTextField" candidateClass="UITextField"/>
